--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background: linear-gradient(135deg, #e1dd0d 0%, #119ae3 100%);
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -220,3 +220,12 @@ button:hover {
     font-weight: bold;
     color: #667eea;
 } 
+.emoji{
+    text-align: center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.li{
+    text-decoration: none;
+    color: #000;
+     font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
