--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h1 {
     color: #333;
     margin-bottom: 30px;
     font-size: 2.5em;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h2 {
@@ -65,7 +66,7 @@ h2 {
 }
 
 .category-btn:hover, .difficulty-btn:hover {
-    background: #667eea;
+    background: rgb(51, 51, 204);
     color: white;
     transform: translateY(-3px);
     box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
